<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MovieCatalog.AppBarOverlay">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIconTint="@color/white"
            app:layout_collapseMode="pin"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/favorite"
        android:visibility="gone"
        app:backgroundTint="@color/green_200"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipeRefresh"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/poster"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_rate"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_poster"
                    tools:text=" The Godfather (1972)" />

                <ImageView
                    android:id="@+id/iv_rate"
                    android:layout_width="24dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:importantForAccessibility="no"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_rate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_rate"
                    app:srcCompat="@drawable/ic_baseline_star_24"
                    app:tint="@color/green_500" />

                <TextView
                    android:id="@+id/tv_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toStartOf="@+id/iv_rate"
                    app:layout_constraintTop_toBottomOf="@+id/iv_poster"
                    tools:text="8.9" />

                <TextView
                    android:id="@+id/tv_subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/gray"
                    app:layout_constraintEnd_toEndOf="@+id/iv_rate"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title"
                    tools:text="R | 2h 55min | Crime, Drama | 24 March 1972 (USA)" />

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintEnd_toEndOf="@+id/tv_subtitle"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
                    app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
                    tools:text="An organized crime dynasty's aging patriarch transfers control of his clandestine empire to his reluctant son." />

                <TextView
                    android:id="@+id/tv_director"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/tv_desc"
                    app:layout_constraintStart_toStartOf="@+id/tv_desc"
                    app:layout_constraintTop_toBottomOf="@+id/tv_desc"
                    tools:text="@string/director" />

                <TextView
                    android:id="@+id/tv_writer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/tv_director"
                    app:layout_constraintStart_toStartOf="@+id/tv_director"
                    app:layout_constraintTop_toBottomOf="@+id/tv_director"
                    tools:text="@string/writers" />

                <TextView
                    android:id="@+id/tv_stars"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/tv_writer"
                    app:layout_constraintStart_toStartOf="@+id/tv_writer"
                    app:layout_constraintTop_toBottomOf="@+id/tv_writer"
                    tools:text="@string/stars" />

                <TextView
                    android:id="@+id/tv_creator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tv_stars"
                    app:layout_constraintStart_toStartOf="@+id/tv_stars"
                    app:layout_constraintTop_toBottomOf="@+id/tv_stars"
                    tools:text="@string/creator" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>